fixed links, footer, indentation

--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
 
 <body>
 <header>
-<h1>Doja Cat</h1>
-<nav>
-    <a href="#Discography">Discography</a>
-    <a href="#About">About</a>
-    <a href="#Awards">Awards</a>
-</nav>
+    <h1>Doja Cat</h1>
+        <nav>
+         <a href="#Discography">Discography</a>
+         <a href="#About">About</a>
+         <a href="#Awards">Awards</a>
+        </nav>
 </header>
 
 <main>
 <section>
     <article>
-    <h2>Discography</h2>
+    <h2 id="Discography">Discography</h2>
         <h3>Albums</h3>
             <ol>
                 <li>Amala (2018)</li>
@@ -42,7 +42,7 @@
 
 <section>
     <article>
-    <h2>About</h2>
+    <h2 id="About">About</h2>
         <h3>Life</h3>
              <p class="blurb">Born Amala Ratna Zandile Dlamini, Doja Cat is an American rapper and singer. She was born in Los Angeles and experienced harsh racism and a mixed-race person, causing her to move away from tradition school into dancing. 
                 She eventually dropped out of school at the age of 16 to pursue the arts.
@@ -60,20 +60,22 @@
 
 <section>
     <article>
-    <h2>Awards</h2>
-    <ul>
-        <li>One Grammy Award</li>
-        <li>Five Billboard Music Awards</li>
-        <li>Five American Music Awards</li>
-        <li>Three MTV Video Music Awards</li>
-    </ul> 
+    <h2 id="Awards">Awards</h2>
+        <ul>
+            <li>One Grammy Award</li>
+            <li>Five Billboard Music Awards</li>
+            <li>Five American Music Awards</li>
+            <li>Three MTV Video Music Awards</li>
+        </ul> 
     </article>
 </section>
 </main>
-</body>
 
 <footer>
     &copy; Michelle Yan
 </footer>
+
+</body>
+
 
 </html>
