fixed links, footer, indentation

--- a/index.html
+++ b/index.html
@@ -5,44 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="About Doja Cat">
-    <link rel="stylesheet" type="text/css" href="styles.css"/>
     <title>Michelle's Favorite Artist</title>
 </head>
 
 <body>
-<header>
-    <h1>Doja Cat</h1>
+    <header>
+        <h1>Doja Cat</h1>
         <nav>
          <a href="#Discography">Discography</a>
          <a href="#About">About</a>
          <a href="#Awards">Awards</a>
         </nav>
-</header>
+    </header>
 
-<main>
-<section>
-    <article>
-    <h2 id="Discography">Discography</h2>
-        <h3>Albums</h3>
+    <main>
+        <section id="Discography">
+            <h2>Discography</h2>
+            <h3>Albums</h3>
             <ol>
                 <li>Amala (2018)</li>
                 <li>Hot Pink (2019)</li>
                 <li>Planet Her (2021)</li>
             </ol>
-        <h3>Popular Singles and Collabs</h3>
+            
+            <h3>Popular Singles and Collabs</h3>
             <ul>
                 <li>"Say So ft. Nicki Minaj"</li>
                 <li>"Kiss Me More ft. SZA"</li>
                 <li>"Woman"</li>
                 <li>"Vegas"</li>
             </ul>
+        </section>
 
-    </article>
-</section>
-
-<section>
-    <article>
-    <h2 id="About">About</h2>
+        <section id="About">
+        <h2>About</h2>
         <h3>Life</h3>
              <p class="blurb">Born Amala Ratna Zandile Dlamini, Doja Cat is an American rapper and singer. She was born in Los Angeles and experienced harsh racism and a mixed-race person, causing her to move away from tradition school into dancing. 
                 She eventually dropped out of school at the age of 16 to pursue the arts.
@@ -55,27 +51,22 @@
             <section class="dojaimage">
             <img src="./images/doja.jpg" alt="Doja Cat performing" width="400" height="225">
             </section>
-    </article>
-</section>
+        </section>
 
-<section>
-    <article>
-    <h2 id="Awards">Awards</h2>
-        <ul>
-            <li>One Grammy Award</li>
-            <li>Five Billboard Music Awards</li>
-            <li>Five American Music Awards</li>
-            <li>Three MTV Video Music Awards</li>
-        </ul> 
-    </article>
-</section>
-</main>
+        <section id="Awards">
+            <h2>Awards</h2>
+            <ul>
+                <li>One Grammy Award</li>
+                <li>Five Billboard Music Awards</li>
+                <li>Five American Music Awards</li>
+                <li>Three MTV Video Music Awards</li>
+            </ul> 
+        </section>
+    </main>
 
-<footer>
+    <footer>
     &copy; Michelle Yan
-</footer>
-
+    </footer>
 </body>
-
 
 </html>
